WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150686
Fix Mac CMake build
https://bugs.webkit.org/show_bug.cgi?id=150686
Summary
Fix Mac CMake build
Alex Christensen
Reported
2015-10-29 12:46:37 PDT
Fix Mac CMake build
Attachments
Patch
(18.99 KB, patch)
2015-10-29 12:47 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(18.85 KB, patch)
2015-10-29 12:57 PDT
,
Alex Christensen
fpizlo
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2015-10-29 12:47:30 PDT
Created
attachment 264334
[details]
Patch
Filip Pizlo
Comment 2
2015-10-29 12:49:07 PDT
Comment on
attachment 264334
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=264334&action=review
> Source/JavaScriptCore/b3/B3Common.cpp:43 > +#if ENABLE(FTL_JIT) > return FTL::verboseCompilationEnabled() || FTL::shouldDumpDisassembly() || shouldDumpIRAtEachPhase(); > +#else > + return false; > +#endif
Why this? Is there ever a case where B3_JIT is enabled when the FTL_JIT isn't? If there is such a case, we should prevent B3_JIT from being enabled.
WebKit Commit Bot
Comment 3
2015-10-29 12:49:19 PDT
Attachment 264334
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 20 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 4
2015-10-29 12:57:39 PDT
Created
attachment 264335
[details]
Patch
Alex Christensen
Comment 5
2015-10-29 13:02:30 PDT
http://trac.webkit.org/changeset/191749
Csaba Osztrogonác
Comment 6
2015-10-29 16:55:16 PDT
(In reply to
comment #5
)
>
http://trac.webkit.org/changeset/191749
It broke the EFL build, please fix it.
Alex Christensen
Comment 7
2015-10-29 17:42:32 PDT
r191767
should fix EFL.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug