Fix Mac CMake build https://bugs.webkit.org/show_bug.cgi?id=150686

Reviewed by Filip Pizlo.

.:

* Source/cmake/WebKitMacros.cmake:

Source/JavaScriptCore:

* API/ObjCCallbackFunction.mm:
* CMakeLists.txt:
* PlatformMac.cmake:

Source/WebCore:

* PlatformMac.cmake:

Source/WebKit:

* CMakeLists.txt:
* PlatformMac.cmake:

Source/WebKit2:

* CMakeLists.txt:
* PlatformMac.cmake:

Source/WTF:

* wtf/CMakeLists.txt:
* wtf/Platform.h:
* wtf/PlatformMac.cmake:

Tools:

* Scripts/build-webkit:
* Scripts/webkitdirs.pm:
(isCachedArgumentfileOutOfDate):
(wrapperPrefixIfNeeded):
(generateBuildSystemFromCMakeProject):
(buildCMakeGeneratedProject):
(cmakeBasedPortName):
(determineIsCMakeBuild):
(isCMakeBuild):
(promptUser):
(jhbuildWrapperPrefixIfNeeded): Deleted.



Canonical link: https://commits.webkit.org/168853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191749 268f45cc-cd09-0410-ab3c-d52691b4dbfc