Source/WTF/wtf/Platform.h
@@ -778,7 +778,7 @@
 
 /* The B3 compiler is an experimental backend that is still in development. We will keep it building
    on Mac/x86-64 for now, though it is unused except for tests. */
-#if PLATFORM(MAC) && CPU(X86_64)
+#if PLATFORM(MAC) && CPU(X86_64) && ENABLE(FTL_JIT)
 #define ENABLE_B3_JIT 1
 #endif
 
