Source/JavaScriptCore/PlatformMac.cmake
@@ -1,13 +1,3 @@
-find_library(COCOA_LIBRARY Cocoa)
-find_library(COREFOUNDATION_LIBRARY CoreFoundation)
-find_library(READLINE_LIBRARY Readline)
-list(APPEND JavaScriptCore_LIBRARIES
-    ${COREFOUNDATION_LIBRARY}
-    ${COCOA_LIBRARY}
-    ${READLINE_LIBRARY}
-    libicucore.dylib
-)
-
 list(APPEND JavaScriptCore_SOURCES
     API/JSAPIWrapperObject.mm
     API/JSContext.mm
